refactor: move campaign verification out of production